errors.txt
javac : 
Practical09.java:22: error: 
duplicate class: Rectangle
At line:1 char:114
+ ... )..."; cd 
$_.FullName; javac *.java 
2>> ..\compile_errors.txt; 
cd ..  ...
+                           
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~
    + CategoryInfo          
    : NotSpecified: (Pract  
  ical09.jav...lass: Rect   
 angle:String) [], Remot    
eException
    + FullyQualifiedErrorId 
    : NativeCommandError
 
class Rectangle {
^
Practical09.java:7: error: 
cannot find symbol
        r1.display();
          ^
  symbol:   method display()
  location: variable r1 of 
type Rectangle
Practical09.java:9: error: 
cannot find symbol
        r2.display();
          ^
  symbol:   method display()
  location: variable r2 of 
type Rectangle
3 errors
javac : 
Practical17.java:27: 
error: duplicate class: 
Classify
At line:1 char:114
+ ... )..."; cd 
$_.FullName; javac *.java 
2>> 
..\compile_errors.txt; cd 
..  ...
+                         
   ~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~
    + CategoryInfo        
      : NotSpecified: (P  
  ractical17.jav...clas   
 s: Classify:String) [    
], RemoteException
    + FullyQualifiedError 
   Id : NativeCommandErr  
  or
 
interface Classify {
^
Practical17.java:31: 
error: duplicate class: 
Result
class Result implements 
Exam, Classify {
^
Practical17.java:11: 
error: cannot find symbol
        if 
(r.isPassed(marks)) {
             ^
  symbol:   method 
isPassed(int)
  location: variable r of 
type Result
3 errors
javac : 
Practical32.java:1: 
error: package 
javafx.application does 
not exist
At line:1 char:114
+ ... )..."; cd 
$_.FullName; javac *.java 
2>> 
..\compile_errors.txt; cd 
..  ...
+                         
   ~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~
    + CategoryInfo        
      : NotSpecified: (P  
  ractical32.jav... doe   
 s not exist:String) [    
], RemoteException
    + FullyQualifiedError 
   Id : NativeCommandErr  
  or
 
import javafx.application.
Application;
                         ^
Practical32.java:2: 
error: package 
javafx.geometry does not 
exist
import 
javafx.geometry.Pos;
                      ^
Practical32.java:3: 
error: package 
javafx.scene does not 
exist
import javafx.scene.Scene;
                   ^
Practical32.java:4: 
error: package 
javafx.scene.control does 
not exist
import javafx.scene.contro
l.Label;
                          
 ^
Practical32.java:5: 
error: package 
javafx.scene.layout does 
not exist
import 
javafx.scene.layout.VBox;
                          
^
Practical32.java:6: 
error: package 
javafx.stage does not 
exist
import javafx.stage.Stage;
                   ^
Practical32.java:8: 
error: cannot find symbol
public class Practical32 
extends Application {
                          
       ^
  symbol: class 
Application
Practical32.java:10: 
error: cannot find symbol
    public void 
start(Stage primaryStage) 
{
                      ^
  symbol:   class Stage
  location: class 
Practical32
Practical33.java:1: 
error: package 
javafx.application does 
not exist
import javafx.application.
Application;
                         ^
Practical33.java:2: 
error: package 
javafx.geometry does not 
exist
import 
javafx.geometry.Pos;
                      ^
Practical33.java:3: 
error: package 
javafx.scene does not 
exist
import javafx.scene.Scene;
                   ^
Practical33.java:4: 
error: package 
javafx.scene.control does 
not exist
import javafx.scene.contro
l.Button;
                          
 ^
Practical33.java:5: 
error: package 
javafx.scene.control does 
not exist
import javafx.scene.contro
l.Label;
                          
 ^
Practical33.java:6: 
error: package 
javafx.scene.layout does 
not exist
import 
javafx.scene.layout.VBox;
                          
^
Practical33.java:7: 
error: package 
javafx.stage does not 
exist
import javafx.stage.Stage;
                   ^
Practical33.java:9: 
error: cannot find symbol
public class Practical33 
extends Application {
                          
       ^
  symbol: class 
Application
Practical33.java:13: 
error: cannot find symbol
    public void 
start(Stage primaryStage) 
{
                      ^
  symbol:   class Stage
  location: class 
Practical33
Practical32.java:9: 
error: method does not 
override or implement a 
method from a supertype
    @Override
    ^
Practical32.java:11: 
error: cannot find symbol
        Label label = new 
Label("Welcome to 
JavaFX!");
        ^
  symbol:   class Label
  location: class 
Practical32
Practical32.java:11: 
error: cannot find symbol
        Label label = new 
Label("Welcome to 
JavaFX!");
                          
^
  symbol:   class Label
  location: class 
Practical32
Practical32.java:13: 
error: cannot find symbol
        VBox root = new 
VBox();
        ^
  symbol:   class VBox
  location: class 
Practical32
Practical32.java:13: 
error: cannot find symbol
        VBox root = new 
VBox();
                        ^
  symbol:   class VBox
  location: class 
Practical32
Practical32.java:14: 
error: cannot find symbol
        root.setAlignment(
Pos.CENTER);
                          
^
  symbol:   variable Pos
  location: class 
Practical32
Practical32.java:17: 
error: cannot find symbol
        Scene scene = new 
Scene(root, 300, 200);
        ^
  symbol:   class Scene
  location: class 
Practical32
Practical32.java:17: 
error: cannot find symbol
        Scene scene = new 
Scene(root, 300, 200);
                          
^
  symbol:   class Scene
  location: class 
Practical32
Practical32.java:25: 
error: cannot find symbol
        launch(args);
        ^
  symbol:   method 
launch(String[])
  location: class 
Practical32
Practical33.java:12: 
error: method does not 
override or implement a 
method from a supertype
    @Override
    ^
Practical33.java:14: 
error: cannot find symbol
        Label label = new 
Label("Count: 0");
        ^
  symbol:   class Label
  location: class 
Practical33
Practical33.java:14: 
error: cannot find symbol
        Label label = new 
Label("Count: 0");
                          
^
  symbol:   class Label
  location: class 
Practical33
Practical33.java:15: 
error: cannot find symbol
        Button button = 
new Button("Click");
        ^
  symbol:   class Button
  location: class 
Practical33
Practical33.java:15: 
error: cannot find symbol
        Button button = 
new Button("Click");
                          
  ^
  symbol:   class Button
  location: class 
Practical33
Practical33.java:22: 
error: cannot find symbol
        VBox root = new 
VBox(10);
        ^
  symbol:   class VBox
  location: class 
Practical33
Practical33.java:22: 
error: cannot find symbol
        VBox root = new 
VBox(10);
                        ^
  symbol:   class VBox
  location: class 
Practical33
Practical33.java:23: 
error: cannot find symbol
        root.setAlignment(
Pos.CENTER);
                          
^
  symbol:   variable Pos
  location: class 
Practical33
Practical33.java:26: 
error: cannot find symbol
        Scene scene = new 
Scene(root, 300, 200);
        ^
  symbol:   class Scene
  location: class 
Practical33
Practical33.java:26: 
error: cannot find symbol
        Scene scene = new 
Scene(root, 300, 200);
                          
^
  symbol:   class Scene
  location: class 
Practical33
Practical33.java:34: 
error: cannot find symbol
        launch(args);
        ^
  symbol:   method 
launch(String[])
  location: class 
Practical33
37 errors
